--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2350,34 +2350,38 @@
 
                                             function initMap() {
                                                 try {
+                                                    // Initialize map
                                                     map = L.map('map', {
                                                         zoom: 2,
                                                         center: [0, 0],
                                                         gestureHandling: true,
                                                         fullscreenControl: false
                                                     });
-                                                    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+
+                                                    // Define and add OSM base layer
+                                                    var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
                                                         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-                                                    });
-                                                    
-                                                    // Move zoom control to bottomright
+                                                    }).addTo(map);
+
+                                                    // Move zoom control to bottom right
                                                     map.zoomControl.setPosition('bottomright');
 
-                                                    // Define CQ Zones and Maidenhead layers with error handling
+                                                    // Define CQ Zones and Maidenhead layers
                                                     var cqzones, maidenhead;
                                                     if (typeof L.cqzones === 'function') {
-                                                        cqzones = L.cqzones({color : 'rgba(255, 0, 0, 0.4)'});
-                                                        cqzones.addTo(map); // Add CQ Zones layer to the map by default
+                                                        cqzones = L.cqzones({ color: 'rgba(255, 0, 0, 0.4)' });
+                                                        cqzones.addTo(map);
                                                     } else {
                                                         console.error('L.cqzones is not defined. CQ Zones layer will not be available.');
                                                     }
+
                                                     if (typeof L.maidenhead === 'function') {
                                                         maidenhead = L.maidenhead();
                                                     } else {
                                                         console.error('L.maidenhead is not defined. Maidenhead layer will not be available.');
                                                     }
 
-                                                    // Add layer control
+                                                    // Add layer control (base + overlays)
                                                     var overlays = {};
                                                     if (cqzones) overlays["<span style='color: black'>CQ Zones</span>"] = cqzones;
                                                     if (maidenhead) overlays["<span style='color: black'>Maidenhead</span>"] = maidenhead;
@@ -2386,14 +2390,14 @@
                                                         'Map': osm
                                                     }, overlays).addTo(map);
 
+                                                    // Load markers based on band
                                                     const band = document.getElementById('bandSelect').value;
                                                     const jsonFile = bandConfig[band].jsonFile;
                                                     const showActiveOnly = isActiveStationsOnly;
+
                                                     fetch(jsonFile)
                                                         .then(response => {
-                                                            if (!response.ok) {
-                                                                throw new Error(`HTTP error! Status: ${response.status}`);
-                                                            }
+                                                            if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
                                                             return response.json();
                                                         })
                                                         .then(data => {
@@ -2401,15 +2405,15 @@
                                                         })
                                                         .catch(error => {
                                                             console.error(`Error fetching ${jsonFile} in initMap:`, error);
-                                                            // Optionally display an error message to the user
                                                             alert(`Failed to load station data for ${band}. Please try again later.`);
                                                         });
+
                                                 } catch (error) {
                                                     console.error('Error initializing map:', error);
-                                                    // Display fallback message to user
                                                     document.getElementById('map').innerHTML = '<p style="color: red; text-align: center;">Failed to load map. Please check your internet connection or try again later.</p>';
                                                 }
                                             }
+
     
     let isActiveStationsOnly = false; // Default state (equivalent to checkbox checked)
 
