--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -1086,8 +1086,8 @@
                                                     try {
                                                         footprintCircle = L.greatCircle([lat, lon], {
                                                             radius: footprintRadius_m,
-                                                            color: currentColor,
-                                                            fillColor: currentColor,
+                                                            color: 'currentColor',
+                                                            fillColor: 'currentColor',
                                                             fillOpacity: 0.2,
                                                             weight: 1,
                                                             wrapElements: true,
