--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -1086,8 +1086,8 @@
                                                     try {
                                                         footprintCircle = L.greatCircle([lat, lon], {
                                                             radius: footprintRadius_m,
-                                                            color: 'currentColor',
-                                                            fillColor: 'currentColor',
+                                                            color: '#0000FF',
+                                                            fillColor: '#0088FF',
                                                             fillOpacity: 0.2,
                                                             weight: 1,
                                                             wrapElements: true,
@@ -1101,8 +1101,8 @@
                                                             radius: footprintRadius_m,
                                                             color: '#0000FF',
                                                             fillColor: '#0088FF',
-                                                            fillOpacity: 0.3,
-                                                            weight: 2
+                                                            fillOpacity: 0.2,
+                                                            weight: 1
                                                         }).addTo(map);
                                                     }
 
