--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2204,7 +2204,7 @@
                                                         ];
                                                     }
 
-                                                    let iconUrl = "images/EME_home.png";
+                                                    let iconUrl = "images/176096839586434633.png";
                                                     if (/Inactive/i.test(Note)) {
                                                         iconUrl = "images/EME_inactive.png";
                                                     } else if (/SK/i.test(Note)) {
@@ -2216,7 +2216,7 @@
                                                     const marker = L.marker(markerPosition, {
                                                         icon: L.icon({
                                                             iconUrl: iconUrl,
-                                                            iconSize: [20, 20]
+                                                            iconSize: [16, 16]
                                                         }),
                                                         title: callsign
                                                     }).addTo(map);
